--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -104,8 +104,13 @@
                 </div>
 
                 <div class="form-group" data-cols="1"
-                  data-tag="standort"
+                  data-tag="Zusammenarbeit"
                   data-type="Zus'arbeit">
+                </div>
+
+                <div class="form-group" data-cols="1"
+                  data-tag="status"
+                  data-type="Status">
                 </div>
               </div>
 
