--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -20,13 +20,17 @@
 
       <div class="page-header" id="banner">
         <div class="row">
-          <div class="col-sm">
+          <div class="col-sm anleitung-infoblock">
+            <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseInfoblock" aria-expanded="false" aria-controls="collapseExample">
+              &#128712; Anleitung</button>
             <h4>Bildarchiv Jürg Straumann</h4>
-            <ul class="anleitung-infoblock">
-              <li class="anleitung">Wählen Sie eine der drei Rubriken „Inhalt“, „Form“ oder „Anderes“ an.</li>
-              <li class="anleitung">Klicken Sie auf eine gewünschte Kategorie.</li>
-              <li class="anleitung">Um die Auswahl einzugrenzen, können Sie eine weitere Kategorie aus einer anderen Rubrik anklicken. Die so gefundene Anzahl Resultate wird Ihnen im Feld „Ausgewählt“ angezeigt.</li>
-              <li class="anleitung">Klicken Sie auf „Anzeigen“, um die Auswahl anzuzeigen, auf „Neuauswahl“, um die Auswahl zurückzusetzen oder auf „Zufall“, um den Zufall entscheiden zu lassen.</li>
+            <ul class="collapse" id="collapseInfoblock">
+              <li>Wählen Sie eine der drei Rubriken „Inhalt“, „Form“ oder „Anderes“ an.</li>
+              <li>Klicken Sie auf eine gewünschte Kategorie.</li>
+              <li>Um die Auswahl einzugrenzen, können Sie eine weitere Kategorie aus einer anderen Rubrik anklicken.</li>
+              <ul><li>Die so gefundene Anzahl Resultate wird Ihnen im Feld „Ausgewählt“ angezeigt.</li></ul>
+              <li>Klicken Sie auf „Anzeigen“, um die Auswahl anzuzeigen, auf „Neuauswahl“, um die Auswahl zurückzusetzen</li>
+              <ul><li>.. oder auf „Zufall“, um den Zufall entscheiden zu lassen.</li></ul>
             </ul>
           </div>
         </div>
