Little changes in UI.

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -24,7 +24,7 @@
             <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseInfoblock" aria-expanded="false" aria-controls="collapseExample">
               &#128712; Anleitung</button>
             <h4>Bildarchiv Jürg Straumann</h4>
-            <ul class="collapse" id="collapseInfoblock">
+            <ul class="collapse show" id="collapseInfoblock">
               <li>Wählen Sie eine der drei Rubriken „Inhalt“, „Form“ oder „Anderes“ an.</li>
               <li>Klicken Sie auf eine gewünschte Kategorie.</li>
               <li>Um die Auswahl einzugrenzen, können Sie eine weitere Kategorie aus einer anderen Rubrik anklicken.</li>
@@ -65,7 +65,7 @@
               <div class="col-sm-8">
 
                 <div class="form-group">
-                  <label class="col-form-label" for="inputTitel">Titel</label>
+                  <label class="col-form-label" for="inputTitel"><h5> Titel</h5></label>
                   <input name="Titel" autocomplete="off" autofocus placeholder="Titelsuche" type="text" class="searchOnEnter">
                   <script>
                     let input = document.querySelector('input');
@@ -121,7 +121,7 @@
               <div class="col-sm-4">
 
                 <div class="form-group">
-                  <label class="col-form-label" for="inputJahr">Jahreszahl</label>
+                  <label class="col-form-label" for="inputJahr"><h5>Jahreszahl</h5> </label>
                   <input placeholder="" id="inputYear" name="Jahr" type="text">
                   <script>
                     let inputyear = document.querySelector('#inputYear');
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label class="col-form-label" for="inputNummer">Werknummer</label>
+                  <label class="col-form-label" for="inputNummer"><h5> Werknummer</h5></label>
                   <input class="searchOnEnter" name="Nummer" type="text">
                 </div>
 <!--
